# 3D_VISION_ASSIGNMENTS

./: README.md
Assign.2 materials/: fillin_the_blanks_codes.cpp
Assignment_1_CGAL  /: CMakeLists.txt
Assignment_1_PCL/: CMakeLists.txt  pcl_test.cpp
Assignment_1_PCL  /: CMakeLists.txt
Assignment_2/: CMakeLists.txt  Ply.hpp  RegionGrowing.cpp  cloud_segmentation.h  cube_distordu.ply  fandisk.ply  types.h
Assignment_2_Cloud_Segmentation/: Assignment_2_report.docx  CMakeLists.txt  Visualization_Tools.h  cloud_segmentation.h
Assignment_2_Cloud_Segmentation/Assignment_2_results/distordu_results/: inliers 0.3 1.ply  inliers 0.3 10.ply  inliers 0.3 100.ply  inliers 0.6 1.ply  inliers 0.6 10.ply  inliers 0.6 100.ply  inliers 0.93 1.ply  inliers 0.93 10.ply  inliers 0.93 100.ply  shape 0.3 1.ply  shape 0.3 10.ply  shape 0.3 100.ply  shape 0.6 1.ply  shape 0.6 10.ply  shape 0.6 100.ply  shape 0.93 1.ply  shape 0.93 10.ply  shape 0.93 100.ply
Assignment_2_Cloud_Segmentation/Assignment_2_results/fandisk_results/: inliers 0.55 1.ply  inliers 0.55 100.ply  inliers 0.55 1000.ply  inliers 0.77 1.ply  inliers 0.77 100.ply  inliers 0.77 1000.ply  inliers 0.99 1.ply  inliers 0.99 100.ply  inliers 0.99 1000.ply  shape 0.55 1.ply  shape 0.55 100.ply  shape 0.55 1000.ply  shape 0.77 1.ply  shape 0.77 100.ply  shape 0.77 1000.ply  shape 0.99 1.ply  shape 0.99 100.ply  shape 0.99 1000.ply
Assignment_2_Cloud_Segmentation/Assignment_2_results/lisse_results/: inliers 0.5 100.ply  inliers 0.5 1000.ply  inliers 0.5 10000.ply  inliers 0.7 100.ply  inliers 0.7 1000.ply  inliers 0.7 10000.ply  inliers 0.9 100.ply  inliers 0.9 1000.ply  inliers 0.9 10000.ply  shape 0.5 100.ply  shape 0.5 1000.ply  shape 0.5 10000.ply  shape 0.7 100.ply  shape 0.7 1000.ply  shape 0.7 10000.ply  shape 0.9 100.ply  shape 0.9 1000.ply  shape 0.9 10000.ply
Assignment_2_Cloud_Segmentation/Assignment_2_rmaterials/: errors_notes.txt
Assignment_3_Mesh/: Assignment_3.docx  CMakeLists.txt  main.cpp
Assignment_3_Mesh/data/: bull_edges_on_the_shortest_path.ply  cross_edges_on_the_shortest_path.ply  cube_edges_on_the_shortest_path.ply  elephant_edges_on_the_shortest_path.ply
Assignment_3_Mesh/example/: bull_edges_on_the_shortest_path.ply
Assignment_4_Essay/: Assignment_4.docx
